--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "stylus": "^0.54.8",
     "stylus-loader": "3.0.2",
+    "swiper": "5.4.5",
+    "vee-validate": "2.2.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
