--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "add": "^2.0.6",
     "axios": "^0.21.1",
+    "better-scroll": "^2.1.1",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "postcss-px2rem": "^0.3.0",
     "stylus": "^0.54.8",
     "stylus-loader": "3.0.2",
